--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <strong> SALAM DUNYA</strong>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde enim eum, ullam sed deleniti eveniet suscipit consectetur ad commodi, modi quam accusamus neque culpa nesciunt sequi vel, hic at tenetur?</p>
+    <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid tempora modi voluptatem fugit autem ipsum voluptate sed quia labore, officia quae dolor libero porro in exercitationem totam dolorem! Amet, unde.</h1> 
 </body>
 </html>
